--- a/config/database.yml
+++ b/config/database.yml
@@ -12,7 +12,8 @@
 default: &default
   adapter: mysql2
   encoding: utf8
-  pool: 5
+  pool: 20
+  timeout: 5000
   username: root
   password:
   socket: /tmp/mysql.sock
